// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Naming stacks 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "NotificationGroupDefaultSNSTopicWrapperInfraNotificationsTopic7482A443": {
      "Type": "AWS::SNS::Topic",
    },
    "NotificationGroupDefaultSNSTopicWrapperSlackMessagesTopic564777CA": {
      "Type": "AWS::SNS::Topic",
    },
    "NotificationGroupTeamInfraSNSTopicWrapperInfraNotificationsTopic33A0C436": {
      "Type": "AWS::SNS::Topic",
    },
    "NotificationGroupTeamInfraSNSTopicWrapperSlackMessagesTopic9EA8DCBC": {
      "Type": "AWS::SNS::Topic",
    },
    "SNSTopicWrapperNotificationsFunFactsTopic9BB85BA8": {
      "Type": "AWS::SNS::Topic",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Naming stacks 2`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "InfraNotificationsTopic55016246": {
      "Type": "AWS::SNS::Topic",
    },
    "NotificationsFunFactsTopicF7A881FD": {
      "Type": "AWS::SNS::Topic",
    },
    "SlackMessagesTopic0D4141FC": {
      "Type": "AWS::SNS::Topic",
    },
    "TeamInfraInfraNotificationsTopicA59C0E27": {
      "Type": "AWS::SNS::Topic",
    },
    "TeamInfraSlackMessagesTopic5C3FC0A6": {
      "Type": "AWS::SNS::Topic",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
